添加自动加载命名空间

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,14 @@
       "email": "hxroyal@gmail.com"
     }
   ],
+  "autoload": {
+    "psr-4": {
+        "Ecjia\\System\\": ""
+    },
+    "classmap": [
+
+    ]
+},
   "extra": {
     "branch-alias": {
       "dev-master": "2.x-dev"
