移除composer-installers-extender依赖

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
     }
   },
   "require": {
-    "ecjia/auto-login": "^1.0",
-    "oomphinc/composer-installers-extender": "^2.0"
+    "ecjia/auto-login": "^1.0"
   }
 }
